Continuação da página de Login

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Amanda Puertas</title>
+<title>home</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Travelix Project">
@@ -38,8 +38,8 @@
 							</ul>
 						</div>
 						<div class="user_box ml-auto">
-							<div class="user_box_login user_box_link"><a href="#">login</a></div>
-							<div class="user_box_register user_box_link"><a href="#">cadastre-se</a></div>
+							<div class="user_box_login user_box_link"><a href="login.html">login</a></div>
+							<div class="user_box_register user_box_link"><a href="cadastro.html">cadastre-se</a></div>
 						</div>
 					</div>
 				</div>
