--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
 							</ul>
 						</div>
 						<div class="user_box ml-auto">
-							<div class="user_box_login user_box_link"><a href="#">login</a></div>
-							<div class="user_box_register user_box_link"><a href="#">cadastre-se</a></div>
+							<div class="user_box_login user_box_link"><a href="login.html">login</a></div>
+							<div class="user_box_register user_box_link"><a href="cadastro.html">cadastre-se</a></div>
 						</div>
 					</div>
 				</div>
