Página de ingressos

--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>login</title>
+	<title>Login</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Travelix Project">
@@ -31,15 +31,9 @@
 							<div class="phone">+55 14 3641-3906</div>
 							<div class="social">
 								<ul class="social_list">
-									<li class="social_list_item"><a target="_blank"
-											href="https://www.facebook.com/amandapuertasturismo?mibextid=ZbWKwL"><i
-												class="fa fa-facebook" aria-hidden="true"></i></a></li>
-									<li class="social_list_item"><a target="_blank"
-											href="https://www.linkedin.com/in/amanda-puertas"><i class="fa fa-linkedin"
-												aria-hidden="true"></i></a></li>
-									<li class="social_list_item"><a target="_blank"
-											href="https://www.instagram.com/amandapuertas/"><i class="fa fa-instagram"
-												aria-hidden="true"></i></a></li>
+									<li class="social_list_item"><a target="_blank" href="https://www.facebook.com/amandapuertasturismo?mibextid=ZbWKwL"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+									<li class="social_list_item"><a target="_blank" href="https://www.linkedin.com/in/amanda-puertas"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+									<li class="social_list_item"><a target="_blank" href="https://www.instagram.com/amandapuertas/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 								</ul>
 							</div>
 							<div class="user_box ml-auto">
@@ -48,8 +42,9 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>		
 			</div>
+	
 
 			<!-- Main Navigation -->
 
@@ -133,7 +128,7 @@
 					<div class="text-center text-lg-start mt-4 pt-2">
 					  <button type="button" class="btn btn-primary btn-lg"
 						style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-					  <p class="small fw-bold mt-2 pt-1 mb-0">Não é Cadastrado? <a href="#!"
+					  <p class="small fw-bold mt-2 pt-1 mb-0">Não é Cadastrado? <a href="cadastro.html"
 						  class="link-danger">Cadastre-se</a></p>
 					</div>
 		  
