--- a/cadastro.html
+++ b/cadastro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>login</title>
+	<title>Cadastre-se</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Travelix Project">
@@ -31,25 +31,20 @@
 							<div class="phone">+55 14 3641-3906</div>
 							<div class="social">
 								<ul class="social_list">
-									<li class="social_list_item"><a target="_blank"
-											href="https://www.facebook.com/amandapuertasturismo?mibextid=ZbWKwL"><i
-												class="fa fa-facebook" aria-hidden="true"></i></a></li>
-									<li class="social_list_item"><a target="_blank"
-											href="https://www.linkedin.com/in/amanda-puertas"><i class="fa fa-linkedin"
-												aria-hidden="true"></i></a></li>
-									<li class="social_list_item"><a target="_blank"
-											href="https://www.instagram.com/amandapuertas/"><i class="fa fa-instagram"
-												aria-hidden="true"></i></a></li>
+									<li class="social_list_item"><a target="_blank" href="https://www.facebook.com/amandapuertasturismo?mibextid=ZbWKwL"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+									<li class="social_list_item"><a target="_blank" href="https://www.linkedin.com/in/amanda-puertas"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+									<li class="social_list_item"><a target="_blank" href="https://www.instagram.com/amandapuertas/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 								</ul>
 							</div>
 							<div class="user_box ml-auto">
-								<div class="user_box_login user_box_link"><a href="#">login</a></div>
-								<div class="user_box_register user_box_link"><a href="#">cadastre-se</a></div>
+								<div class="user_box_login user_box_link"><a href="login.html">login</a></div>
+								<div class="user_box_register user_box_link"><a href="cadastro.html">cadastre-se</a></div>
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>		
 			</div>
+	
 
 			<!-- Main Navigation -->
 
@@ -109,6 +104,18 @@
 				<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1" id="login3">
 					<!-- Email input -->
 					<div class="form-outline mb-4">
+						<input type="name" id="form3Example3" class="form-control form-control-lg"
+						  placeholder="Nome"/>
+						<label class="form-label" for="form3Example3">Nome e Sobrenome</label>
+					  </div>
+
+					  <div class="form-outline mb-4">
+						<input type="CPF" id="form3Example3" class="form-control form-control-lg"
+						  placeholder="CPF"/>
+						<label class="form-label" for="form3Example3">CPF</label>
+					  </div>
+
+					<div class="form-outline mb-4">
 					  <input type="email" id="form3Example3" class="form-control form-control-lg"
 						placeholder="Email"/>
 					  <label class="form-label" for="form3Example3">Email</label>
@@ -120,6 +127,12 @@
 						placeholder="Senha"/>
 					  <label class="form-label" for="form3Example4">Senha</label>
 					</div>
+
+					<div class="form-outline mb-3">
+						<input type="password" id="form3Example4" class="form-control form-control-lg"
+						  placeholder="Confirme a Senha"/>
+						<label class="form-label" for="form3Example4">Confirme a Senha</label>
+					  </div>
 		  
 					<div class="d-flex justify-content-between align-items-center">
 					  <!-- Checkbox -->
@@ -133,8 +146,8 @@
 					<div class="text-center text-lg-start mt-4 pt-2">
 					  <button type="button" class="btn btn-primary btn-lg"
 						style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-					  <p class="small fw-bold mt-2 pt-1 mb-0">Não é Cadastrado? <a href="#!"
-						  class="link-danger">Cadastre-se</a></p>
+					  <p class="small fw-bold mt-2 pt-1 mb-0">Já é Cadastrado? <a href="login.html"
+						  class="link-danger">Login</a></p>
 					</div>
 		  
 				  </form>
